--- a/delete-account.html
+++ b/delete-account.html
@@ -1,18 +1,28 @@
-If you'd like to delete your BodyIQ account and all associated data, please follow the steps below:
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Delete Your BodyIQ Account</title>
+</head>
+<body style="font-family: sans-serif; padding: 2rem; line-height: 1.6;">
+  <h1>Delete Your BodyIQ Account</h1>
+  <p>If you'd like to delete your BodyIQ account and all associated data, please follow the steps below:</p>
+  <ol>
+    <li><strong>Send an email</strong> to <a href="mailto:meghraj.ranaware22@vit.edu">meghraj.ranaware22@vit.edu</a> from the email you used to register in the app.</li>
+    <li><strong>Mention:</strong> Your email address and request account deletion.</li>
+  </ol>
 
-1. Contact us via email:
-Send an account deletion request to meghraj.ranaware22@vit.edu using the email you used to sign up.
+  <h3>What will be deleted:</h3>
+  <ul>
+    <li>Your email and profile data</li>
+    <li>All uploaded images (face, biceps, abs, back, legs, full body)</li>
+    <li>Fitness scores, comparisons, and analytics</li>
+  </ul>
 
-2. What will be deleted:
+  <h3>Retention Policy:</h3>
+  <p>Your data will be permanently deleted within <strong>30 days</strong> after the request.</p>
 
-Your email and authentication info
-
-All uploaded body images (face, biceps, abs, etc.)
-
-All fitness scores, stats, and comparison history
-
-3. Retention Policy:
-Your data will be deleted within 30 days of the request.
-Some anonymized analytics may be retained for performance monitoring but are not personally identifiable.
-
-For urgent requests, contact us at: meghraj.ranaware22@vit.edu
+  <p>For urgent deletion requests, please contact us directly at <a href="mailto:meghraj.ranaware22@vit.edu">meghraj.ranaware22@vit.edu</a></p>
+</body>
+</html>
