--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -1,1 +1,370 @@
-hi their 
+# BodyIQ Terms and Conditions
+**Last Updated: August 4, 2025**
+
+## Agreement to Terms
+These Terms and Conditions ("Terms," "Agreement") govern your use of the BodyIQ mobile application ("App," "Service," or "Application") developed by Meghraj Ranaware ("we," "us," "our," or "Service Provider").
+
+By downloading, installing, or using BodyIQ, you agree to be bound by these Terms. If you disagree with any part of these Terms, you may not use our Service.
+
+## Description of Service
+BodyIQ is a comprehensive fitness and body analysis mobile application that provides:
+
+### Core Features
+- **Six-Point Body Analysis:** Face, Biceps, Back, Legs, Abdominal (Packs), and Full Body assessment
+- **AI-Powered Analysis:** Advanced image analysis using artificial intelligence
+- **Fitness Scoring:** Comprehensive scoring system (0-100) for each body part
+- **Progress Tracking:** Historical data and improvement monitoring (stored locally)
+- **Personalized Recommendations:** Customized fitness and aesthetic advice
+- **Local Data Storage:** All images and analysis data stored securely on your device
+
+### Social Features
+- **Friend Comparisons:** Compare body analysis results with friends (processed locally)
+- **Soulmate Compatibility:** Special comparison feature for romantic partners (processed locally)
+- **Social Sharing:** Share profile cards and achievements on social media (from local data)
+- **Community Features:** Connect with other users for motivation and support
+
+### Technical Features
+- **Local Data Storage:** All images and analysis data stored in device memory via Redux store
+- **Secure Email Storage:** Only email addresses stored in Supabase database
+- **AI Processing:** Google Gemini AI for temporary image analysis
+- **Email Notifications:** Account verification and updates via Resend
+- **Subscription Management:** RevenueCat for payment processing and subscription handling
+- **Cross-Platform Compatibility:** Available on iOS and Android
+
+## User Eligibility and Account Registration
+
+### Age Requirements
+- You must be at least 13 years old to use BodyIQ
+- Users between 13-17 require parental consent
+- Users under 18 should use the app under parental supervision
+
+### Account Responsibilities
+- Provide accurate email address for registration
+- Maintain the security of your account credentials
+- Notify us immediately of any unauthorized access
+- You are responsible for all activities under your account
+- Ensure your device has sufficient storage for local data
+
+### Prohibited Users
+- Individuals prohibited by applicable law from using such services
+- Users who have been previously banned from BodyIQ
+- Automated systems, bots, or non-human entities
+
+## Acceptable Use Policy
+
+### Permitted Uses
+- Personal fitness tracking and body analysis
+- Sharing results with friends and social media (from locally stored data)
+- Participating in community features respectfully
+- Using comparison features with mutual consent (processed locally)
+
+### Prohibited Activities
+
+**Content Violations:**
+- Uploading inappropriate, offensive, or non-personal images
+- Sharing explicit, sexual, or inappropriate content
+- Impersonating others or creating fake profiles
+- Uploading images of minors (under 18) without parental consent
+
+**Technical Violations:**
+- Attempting to reverse engineer, hack, or exploit the app
+- Using automated tools, bots, or scripts
+- Attempting to access other users' private data or local storage
+- Interfering with app functionality or security measures
+
+**Community Violations:**
+- Harassment, bullying, or inappropriate behavior toward other users
+- Spam, unsolicited communications, or commercial activities
+- Sharing false or misleading information
+- Violating other users' privacy or consent
+
+## Image Upload and Analysis Terms
+
+### Image Requirements
+- Images must be of yourself only
+- Photos should be clear and well-lit for accurate analysis
+- Each body part requires specific positioning for optimal results
+- Images must comply with content guidelines (no nudity, inappropriate content)
+
+### Local Storage and Processing
+- **All images are stored locally on your device in Redux store**
+- **No images are uploaded to or stored on our servers**
+- **Images are temporarily sent to Google Gemini AI for analysis only**
+- **Original images remain on your device at all times**
+- **You have complete control over your image data**
+
+### Analysis Accuracy
+- AI analysis results are estimates and not medical diagnoses
+- Results are for informational and motivational purposes only
+- Individual results may vary based on image quality and other factors
+- We do not guarantee 100% accuracy of AI-generated statistics
+
+### Data Ownership and Control
+- You retain complete ownership of your images stored locally
+- You can delete any or all images at any time through app settings
+- Uninstalling the app will permanently delete all locally stored data
+- No backup or recovery is possible once local data is deleted
+
+## Comparison Features Terms
+
+### Friend Comparisons
+- Both users must explicitly consent to comparison
+- Comparisons are processed locally on each device
+- Results are stored locally unless manually deleted
+- Users can withdraw consent and delete comparison data at any time
+- No comparison data is transmitted to our servers
+
+### Soulmate Comparisons
+- Special feature for romantic partners or close relationships
+- Requires mutual consent and verification
+- Enhanced compatibility scoring and relationship insights
+- All processing occurs locally on user devices
+- Additional privacy protections for sensitive relationship data
+
+### Comparison Data Usage
+- All comparison processing occurs locally on user devices
+- No comparison data is shared with third parties or our servers
+- Users control visibility and sharing of comparison results
+- Automated comparison suggestions may be provided based on local data
+- Users can delete all comparison history through app settings
+
+## Intellectual Property Rights
+
+### Our Rights
+- BodyIQ app, including all code, design, and functionality, is owned by Meghraj Ranaware
+- All trademarks, logos, and brand elements are our exclusive property
+- AI algorithms and analysis methods are proprietary technology
+- User interface, features, and overall app design are protected by copyright
+
+### Your Rights
+- You retain complete ownership of images and personal data stored locally
+- You grant us a limited license to process your email and subscription data for account management
+- You may delete your local content and account at any time
+- Your usage rights are limited to personal, non-commercial use
+- You control all locally stored data through device-based management
+
+### Prohibited Actions
+- Copying, modifying, or distributing app code or content
+- Creating derivative works or competing applications
+- Extracting or reverse engineering our algorithms
+- Using our trademarks or branding without permission
+
+## Privacy and Data Protection
+
+### Data Collection and Use
+- We collect and process data as described in our Privacy Policy
+- Email addresses and subscription data are stored in our Supabase database
+- All images and analysis data are stored locally on your device
+- AI analysis is performed by Google Gemini AI with privacy protections
+- Email communications are handled by Resend service
+- Subscription management is handled by RevenueCat
+
+### User Control
+- You control your privacy settings and email preferences
+- You can delete your account and data from our database at any time
+- You have complete control over locally stored images and data
+- You can opt out of comparison features and social sharing
+- Local data can be cleared through app settings
+
+### Local Data Management
+- **Complete Device Control:** All images and analysis data remain on your device
+- **No Cloud Storage:** We do not store, backup, or access your images
+- **User Responsibility:** You are responsible for local data backup if desired
+- **Permanent Deletion:** Uninstalling the app permanently deletes all local data
+
+### Third-Party Services
+- **RevenueCat:** Subscription management and payment processing
+- **Apple App Store/Google Play Store:** Payment processing and app distribution
+- **Google Gemini AI:** Temporary image processing for analysis only
+- **Supabase:** Email address and subscription data storage only
+- **Resend:** Email delivery and notification services
+- These services have their own privacy policies and terms
+
+## Payment Terms and Subscriptions
+
+### Subscription Service
+- BodyIQ offers a weekly subscription service for unlimited access to all features
+- Subscription payments are processed through RevenueCat and your device's app store (Apple App Store or Google Play Store)
+- Subscription pricing and terms are displayed in the app before purchase
+- Subscriptions automatically renew unless cancelled before the renewal date
+
+### Free Trial
+- New users receive a free trial with limited scans to test the app functionality
+- Once the free trial scan limit is reached, continued access requires an active subscription
+- Free trial terms and scan limits are displayed in the app
+- Users can subscribe at any time during or after the free trial period
+
+### Payment Processing
+- All payments are processed through Apple App Store or Google Play Store payment systems
+- RevenueCat manages subscription status and provides subscription analytics
+- App store payment terms and conditions apply to all transactions
+- Refund requests must be made through your respective app store
+
+### Cancellation and Refunds
+- Subscriptions can be cancelled at any time through your device's app store settings
+- Cancellation will take effect at the end of the current billing period
+- Refund policies follow Apple App Store and Google Play Store guidelines
+- Contact your app store directly for refund requests
+
+## User Responsibilities
+
+### Subscription Management
+- Users are responsible for managing their subscriptions through their device's app store
+- Users should monitor their subscription status and renewal dates
+- Free trial usage should be tracked to avoid unexpected subscription charges
+- Users must cancel subscriptions through the appropriate app store if they no longer wish to continue
+
+### Account and Payment Information
+- Provide accurate email address for account and subscription management
+- Maintain the security of your account credentials
+- Ensure your payment method is valid and up to date in your app store account
+- Notify us immediately of any unauthorized access or suspicious subscription activity
+
+## Disclaimers and Limitations
+
+### Service Availability
+- App functionality depends on internet connectivity for AI analysis
+- We do not guarantee 100% uptime or availability
+- Features may be temporarily unavailable for maintenance
+- Third-party service dependencies may affect app performance
+
+### Analysis Accuracy
+- AI-generated fitness statistics are estimates, not medical advice
+- Results should not be used for medical diagnosis or treatment decisions
+- Individual results may vary significantly
+- Consult healthcare professionals for medical concerns
+
+### Local Data Responsibility
+- You are responsible for device storage management
+- Local data is not backed up by our services
+- Device malfunctions may result in data loss
+- Regular local backups are recommended if data preservation is important
+
+### User Responsibility
+- You are responsible for device compatibility and functionality
+- Internet and data charges from your service provider apply
+- Device security (avoiding jailbreaking/rooting) is your responsibility
+- Sufficient device storage is required for app functionality
+
+## Limitation of Liability
+
+### Service Limitations
+- We provide the app "as is" without warranties of any kind
+- We do not guarantee accuracy, completeness, or reliability of analysis results
+- Technical issues, errors, or interruptions may occur
+- Third-party service dependencies may affect functionality
+
+### Liability Exclusions
+- We are not liable for indirect, incidental, or consequential damages
+- Our liability is limited to the amount paid for the service
+- We are not responsible for local data loss, device damage, or third-party actions
+- Users assume risk for any decisions based on app analysis results
+- We are not liable for loss of locally stored data due to device issues
+
+### Force Majeure
+- We are not liable for service interruptions due to circumstances beyond our control
+- This includes natural disasters, government actions, or third-party service failures
+
+## Termination
+
+### User Termination
+- You may delete your account and stop using the service at any time
+- Account deletion will permanently remove your data from our database within 30 days
+- You can uninstall the app from your device using standard procedures
+- Uninstalling the app will permanently delete all locally stored data
+- Some data may be retained for legal or safety purposes as described in our Privacy Policy
+
+### Service Termination by Us
+- We may suspend or terminate accounts for violations of these Terms
+- We may discontinue the service with reasonable notice to users
+- Termination may be immediate for serious violations or legal requirements
+- Upon termination, your right to use the app ceases immediately
+
+### Effects of Termination
+- All user rights and licenses granted in these Terms will end
+- You must cease using the app and may be required to delete it
+- Certain provisions (disclaimers, limitations, etc.) survive termination
+- Data deletion will proceed according to our Privacy Policy
+- Local data remains on your device until app is uninstalled
+
+## Updates and Modifications
+
+### App Updates
+- We may update the app to improve functionality, security, or compatibility
+- Updates may be required to continue using the service
+- We do not guarantee compatibility with all device versions
+- Major changes will be communicated to users in advance
+- Updates may affect local data storage or management
+
+### Terms Updates
+- These Terms may be updated periodically
+- Material changes will be communicated through the app or email
+- Continued use after updates constitutes acceptance of new Terms
+- You should review Terms regularly for changes
+
+### Feature Changes
+- We may add, modify, or remove features at our discretion
+- New features may be subject to additional terms or limitations
+- Deprecated features will be discontinued with reasonable notice
+- Changes may affect local data handling or storage
+
+## Governing Law and Dispute Resolution
+
+### Applicable Law
+These Terms are governed by the laws of the Republic of India, and any disputes shall be resolved under the jurisdiction of the courts in Pune, Maharashtra.
+International users agree to jurisdiction as specified.
+
+### Dispute Resolution Process
+- **Direct Communication:** Contact us first to resolve issues informally
+- **Mediation:** If needed, disputes may be resolved through mediation
+- **Legal Action:** Court proceedings as a last resort
+- **Class Action Waiver:** Disputes resolved individually, not as class actions
+
+## Contact Information
+For questions, concerns, or support regarding these Terms:
+
+**Email:** meghraj.ranaware22@vit.edu  
+**Developer:** Meghraj Ranaware  
+**App:** BodyIQ
+
+**Support Hours:** We aim to respond within 2-3 business days  
+**Technical Issues:** Include device model, OS version, and error descriptions
+
+## Severability and Entire Agreement
+
+### Severability
+If any provision of these Terms is found to be unenforceable, the remaining provisions will continue in full force and effect.
+
+### Entire Agreement
+These Terms, together with our Privacy Policy, constitute the entire agreement between you and BodyIQ regarding use of the service.
+
+### Amendment
+These Terms may only be amended through written updates posted in the app or on our official channels.
+
+## Special Provisions
+
+### AI and Technology Disclaimers
+- AI analysis technology is continuously evolving and improving
+- Results may change as algorithms are updated
+- We do not guarantee consistency across different app versions
+- Technology limitations may affect analysis accuracy
+
+### Health and Fitness Disclaimers
+- App results are not medical advice or professional fitness guidance
+- Consult healthcare professionals for medical concerns or fitness planning
+- Individual results and goals vary significantly
+- App is intended for general wellness and motivation only
+
+### Social Features Guidelines
+- Respect other users' privacy and consent
+- Report inappropriate behavior or content
+- Use comparison features responsibly and ethically
+- Social sharing should comply with platform-specific terms
+
+### Local Data Management Guidelines
+- **User Responsibility:** You are solely responsible for managing locally stored data
+- **No Recovery Service:** We cannot recover locally deleted data
+- **Device Requirements:** Ensure adequate storage space for optimal performance
+- **Security:** Protect your device to secure your locally stored data
+
+**Effective Date:** August 4, 2025
