--- a/support.html
+++ b/support.html
@@ -60,14 +60,14 @@
   <div class="section contact-box">
     <h2>Contact Support</h2>
     <p>If you need further assistance, please reach out:</p>
-    <p>Email: <a href="mailto:bodyiq.support@gmail.com">bodyiq.support@gmail.com</a></p>
+    <p>Email: <a href="mailto:meghraj.ranaware22@vit.edu">meghraj.ranaware22@vit.edu</a></p>
   </div>
 
   <div class="section">
     <h2>Additional Resources</h2>
     <ul>
-      <li><a href="https://github.com/meghrajranaware23/bodyiq-policies/blob/main/terms.md" target="_blank">Terms & Conditions</a></li>
-      <li><a href="https://github.com/meghrajranaware23/bodyiq-policies/blob/main/privacy.md" target="_blank">Privacy Policy</a></li>
+      <li><a href="https://meghrajranaware23.github.io/bodyiq-policies/terms-and-conditions.html" target="_blank">Terms & Conditions</a></li>
+      <li><a href="https://meghrajranaware23.github.io/bodyiq-policies/privacy-policy.html" target="_blank">Privacy Policy</a></li>
     </ul>
   </div>
 
