--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -118,7 +118,7 @@
             <li><strong>Local Data Storage:</strong> All images and analysis data stored in device memory via Redux store</li>
             <li><strong>Secure Email Storage:</strong> Only email addresses stored in Supabase database</li>
             <li><strong>AI Processing:</strong> Google Gemini AI for temporary image analysis</li>
-            <li><strong>Email and OTP Verification:</strong> Account verification and updates via Resend</li>
+            <li><strong>Email and OTP Verification:</strong> Account verification and login via Resend</li>
             <li><strong>Subscription Management:</strong> RevenueCat for payment processing and subscription handling</li>
             <li><strong>Cross-Platform Compatibility:</strong> Available on iOS and Android</li>
         </ul>
@@ -136,7 +136,7 @@
         <ul>
             <li>Registration requires a valid email address</li>
             <li>Email verification through OTP (One-Time Password) sent to your email</li>
-            <li>No third-party login services are required</li>
+            <li>Only email + OTP authentication is used for all account access</li>
             <li>Account creation is free and does not require payment information</li>
         </ul>
 
@@ -330,11 +330,11 @@
 
         <h3>Email and OTP Verification</h3>
         <ul>
-            <li>BodyIQ uses email-based authentication with OTP (One-Time Password) verification</li>
-            <li>You must provide a valid email address for account creation</li>
-            <li>OTP codes are sent to your email for secure login verification</li>
-            <li>No third-party login services (Google, Facebook, etc.) are used or required</li>
-            <li>Keep your email account secure as it controls access to your BodyIQ account</li>
+            <li>BodyIQ uses email-based authentication with OTP (One-Time Password) verification exclusively</li>
+            <li>You must provide a valid email address for account creation and login</li>
+            <li>OTP codes are sent to your email for all authentication needs</li>
+            <li>No third-party login services (Google, Facebook, etc.) are available or supported</li>
+            <li>Keep your email account secure as it is the only way to access your BodyIQ account</li>
         </ul>
 
         <h3>Account Security Responsibilities</h3>
