--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -151,8 +151,7 @@
             <h3>Data Collection Summary for Apple Compliance</h3>
             <p><strong>What We Actually Collect and Store in Our Database:</strong></p>
             <ul>
-                <li>Email addresses (via email/OTP or Google Sign-In)</li>
-                <li>Google account information (if using Google Sign-In)</li>
+                <li>Email addresses (via email/OTP verification)</li>
                 <li>Subscription status and payment information</li>
                 <li>In-app product purchase information and transaction records</li>
                 <li>User account preferences</li>
@@ -173,8 +172,7 @@
 
         <h4>Account Information:</h4>
         <ul>
-            <li>Email address (for account creation and OTP verification, or via Google Sign-In)</li>
-            <li>Google account information (name, email, profile picture) if using Google Sign-In</li>
+            <li>Email address (for account creation and OTP verification)</li>
             <li>User ID (generated automatically)</li>
             <li>Age and gender (for personalized analysis)</li>
             <li>Profile preferences and settings</li>
@@ -183,7 +181,6 @@
         <h4>Authentication Methods:</h4>
         <ul>
             <li><strong>Email + OTP Verification:</strong> Direct email registration with one-time password verification</li>
-            <li><strong>Google Sign-In:</strong> Authentication through Google account with permission-based access to profile information</li>
         </ul>
 
         <h4>Subscription and Purchase Data:</h4>
@@ -270,7 +267,6 @@
         <ul>
             <li>Maintain your account and user profile (email and subscription/purchase data stored in database)</li>
             <li>Send email confirmations and OTP verification codes (via Resend service)</li>
-            <li>Authenticate users through Google Sign-In when selected</li>
             <li>Process subscription management and in-app product purchases (via RevenueCat)</li>
             <li>Provide customer support and respond to inquiries</li>
             <li>Improve app performance and user experience</li>
@@ -280,10 +276,9 @@
 
         <h3>Storage Infrastructure</h3>
         <ul>
-            <li><strong>Primary Database:</strong> Supabase (stores ONLY email addresses, Google account info if applicable, subscription data, and in-app purchase information)</li>
+            <li><strong>Primary Database:</strong> Supabase (stores ONLY email addresses, subscription data, and in-app purchase information)</li>
             <li><strong>Image Storage:</strong> Local device memory via Redux store (NO cloud storage - all images remain on user's device)</li>
             <li><strong>Email Services:</strong> Resend for email confirmations and OTP verification</li>
-            <li><strong>Google Services:</strong> Google Sign-In for authentication (when user chooses this option)</li>
             <li><strong>AI Processing:</strong> Google Gemini AI for image analysis (temporary processing only - no storage)</li>
             <li><strong>Payment Processing:</strong> RevenueCat for subscription and in-app product purchase handling</li>
         </ul>
@@ -296,7 +291,7 @@
                 <li>AI analysis results returned and stored locally on your device</li>
                 <li>Original images remain only on your device (never uploaded to any server for storage)</li>
                 <li>Analysis results displayed in app interface</li>
-                <li>Only email addresses, Google account info (if applicable), subscription data, and in-app purchase information are stored in our Supabase database</li>
+                <li>Only email addresses, subscription data, and in-app purchase information are stored in our Supabase database</li>
             </ol>
         </div>
 
@@ -315,9 +310,8 @@
         <h3>With Service Providers</h3>
         <p>We share limited data with trusted third-party service providers:</p>
         <ul>
-            <li><strong>Supabase:</strong> Email address, Google account info (if applicable), subscription data, and in-app purchase information storage ONLY</li>
+            <li><strong>Supabase:</strong> Email address, subscription data, and in-app purchase information storage ONLY</li>
             <li><strong>RevenueCat:</strong> Subscription management, in-app product purchase processing, and payment handling</li>
-            <li><strong>Google Services:</strong> Authentication services (if user chooses Google Sign-In)</li>
             <li><strong>Google Gemini AI:</strong> Temporary image analysis processing (images not stored by Google)</li>
             <li><strong>Resend:</strong> Email delivery and OTP verification services</li>
             <li><strong>App Store Platforms:</strong> Google Play Services and Apple App Store</li>
@@ -346,7 +340,6 @@
         <h3>Database-Stored Data</h3>
         <ul>
             <li><strong>Email addresses:</strong> Retained while account is active plus 30 days after deletion</li>
-            <li><strong>Google account information:</strong> Retained while account is active plus 30 days after deletion</li>
             <li><strong>Subscription data:</strong> Retained for 7 years for tax and legal compliance</li>
             <li><strong>In-app purchase data:</strong> Retained for 7 years for tax and legal compliance</li>
             <li><strong>Free trial usage data:</strong> Retained while account is active plus 30 days after deletion</li>
@@ -366,11 +359,10 @@
 
         <h3>Technical Safeguards</h3>
         <ul>
-            <li><strong>Database Encryption:</strong> Email, Google account info, subscription, and purchase data encrypted in transit and at rest</li>
+            <li><strong>Database Encryption:</strong> Email, subscription, and purchase data encrypted in transit and at rest</li>
             <li><strong>Local Storage Security:</strong> Data encrypted within Redux store on device</li>
             <li><strong>Access Controls:</strong> Limited access to database data by authorized personnel only</li>
             <li><strong>Regular Audits:</strong> Periodic security assessments and updates</li>
-            <li><strong>Google Sign-In Security:</strong> Secure OAuth 2.0 authentication protocols</li>
         </ul>
 
         <h3>AI Processing Security</h3>
@@ -395,19 +387,17 @@
 
         <h3>Access and Control</h3>
         <ul>
-            <li><strong>View Your Data:</strong> Access email, Google account info (if applicable), subscription, and purchase information we have stored</li>
-            <li><strong>Update Information:</strong> Correct or modify your email, Google account preferences, and account settings</li>
+            <li><strong>View Your Data:</strong> Access email, subscription, and purchase information we have stored</li>
+            <li><strong>Update Information:</strong> Correct or modify your email and account settings</li>
             <li><strong>Download Data:</strong> Export your email, subscription, and purchase data in a portable format</li>
             <li><strong>Delete Account:</strong> Permanently remove your account and data from our database</li>
             <li><strong>Local Data Control:</strong> Manage all images and analysis data through app settings</li>
-            <li><strong>Google Account Management:</strong> Revoke Google Sign-In permissions through Google account settings</li>
         </ul>
 
         <h3>Communication Preferences</h3>
         <ul>
             <li><strong>Email Notifications:</strong> Control what emails you receive</li>
             <li><strong>OTP Verification:</strong> Manage email-based authentication preferences</li>
-            <li><strong>Google Sign-In Preferences:</strong> Manage Google authentication settings</li>
             <li><strong>Push Notifications:</strong> Manage app notification settings</li>
             <li><strong>Marketing Communications:</strong> Opt out of promotional messages</li>
             <li><strong>Social Sharing:</strong> Control what data appears in shared content</li>
@@ -444,9 +434,8 @@
         <ul>
             <li><strong>RevenueCat:</strong> Subscription management, in-app product purchase processing, and payment handling</li>
             <li><strong>Apple App Store / Google Play Store:</strong> Payment processing</li>
-            <li><strong>Google Sign-In:</strong> Authentication services (when user chooses this option)</li>
             <li><strong>Google Gemini AI:</strong> Temporary image analysis (images not stored)</li>
-            <li><strong>Supabase:</strong> Email, Google account info, subscription, and purchase data storage</li>
+            <li><strong>Supabase:</strong> Email, subscription, and purchase data storage</li>
             <li><strong>Resend:</strong> Email communications and OTP verification</li>
         </ul>
 
