Update privacy policy content and styling

--- a/footballprivacypolicy.html
+++ b/footballprivacypolicy.html
@@ -85,9 +85,28 @@
       border-left: 3px solid var(--green);
       border-radius: 10px;
       padding: 1.4rem 1.6rem;
-      margin-bottom: 3rem;
+      margin-bottom: 2rem;
       font-size: 0.95rem;
       color: var(--text);
+    }
+
+    .highlight-box {
+      background: #001a0a;
+      border: 1px solid var(--green);
+      border-radius: 10px;
+      padding: 1.6rem 1.6rem;
+      margin-bottom: 3rem;
+      font-size: 0.95rem;
+      text-align: center;
+    }
+
+    .highlight-box strong {
+      display: block;
+      font-family: 'Bebas Neue', sans-serif;
+      font-size: 1.4rem;
+      letter-spacing: 2px;
+      color: var(--green);
+      margin-bottom: 0.5rem;
     }
 
     section {
@@ -117,13 +136,6 @@
 
     p { margin-bottom: 0.8rem; font-size: 0.95rem; }
     p:last-child { margin-bottom: 0; }
-
-    ul {
-      padding-left: 1.4rem;
-      font-size: 0.95rem;
-    }
-
-    ul li { margin-bottom: 0.35rem; }
 
     a { color: var(--green); text-decoration: none; }
     a:hover { text-decoration: underline; }
@@ -161,77 +173,48 @@
 <main>
 
   <div class="intro">
-    Your privacy matters to us. This policy explains in plain language what data Football IQ collects, how we use it, and your rights. We keep it short on purpose.
+    Your privacy is fully protected. Football IQ is built on one simple principle — <strong>what happens on your phone, stays on your phone.</strong>
+  </div>
+
+  <div class="highlight-box">
+    <strong>We Collect Zero Data</strong>
+    Football IQ does not collect, store, transmit, or share any personal information. No accounts. No sign-ups. No servers. Everything lives only on your device.
   </div>
 
   <section>
     <h2>Who We Are</h2>
-    <p>Football IQ is a mobile application designed to train football decision-making and tactical intelligence. If you have any questions about this policy, contact us at <a href="mailto:privacy@footballiq.app">privacy@footballiq.app</a>.</p>
+    <p>Football IQ is a mobile application that trains football decision-making and tactical intelligence. For any questions about this policy, contact us at <a href="mailto:privacy@footballiq.app">privacy@footballiq.app</a>.</p>
   </section>
 
   <section>
-    <h2>What We Collect</h2>
-    <p>We collect only what we need to run the app:</p>
-    <ul>
-      <li><strong>Account info</strong> – name, email address, and password when you sign up.</li>
-      <li><strong>Profile data</strong> – your position, age group, and skill level (chosen during onboarding).</li>
-      <li><strong>Training data</strong> – your drill results, IQ scores, decision times, and progress through levels.</li>
-      <li><strong>Device info</strong> – device type, OS version, and app version for bug fixing.</li>
-      <li><strong>Usage data</strong> – which features you use and how often, to improve the experience.</li>
-    </ul>
-    <p>We do <strong>not</strong> collect your location, contacts, camera, or microphone unless you explicitly use the match upload feature.</p>
+    <h2>No Account, No Sign-Up</h2>
+    <p>Football IQ requires no registration, login, email address, or personal details of any kind. You download the app and start training immediately. We have no way to identify who you are — and we don't want to.</p>
   </section>
 
   <section>
-    <h2>How We Use Your Data</h2>
-    <ul>
-      <li>To personalise your training pathway and IQ score.</li>
-      <li>To track your progress and show leaderboard rankings.</li>
-      <li>To improve app features and fix bugs.</li>
-      <li>To send you training reminders (only if you opt in).</li>
-      <li>To process payments for Premium subscriptions.</li>
-    </ul>
-    <p>We never sell your personal data to third parties.</p>
+    <h2>All Data Stays On Your Device</h2>
+    <p>Everything the app generates — your IQ scores, drill results, progress, training history, and preferences — is stored exclusively in your phone's local storage. This data never leaves your device. We have no access to it, and it is never transmitted to us or any third party.</p>
+    <p>If you uninstall the app, all of this data is permanently removed from your device.</p>
   </section>
 
   <section>
-    <h2>Data Sharing</h2>
-    <p>We only share data with trusted service providers who help us operate the app — such as our cloud hosting provider and payment processor. These providers are contractually required to protect your data and cannot use it for their own purposes.</p>
-    <p>We may share anonymised, aggregated statistics (e.g. average IQ scores by position) publicly for research or marketing — this data cannot identify you.</p>
+    <h2>No Internet Required</h2>
+    <p>All core training features of Football IQ work fully offline. No data is sent or received during your sessions.</p>
+  </section>
+
+  <section>
+    <h2>No Third-Party Tracking</h2>
+    <p>We do not use any analytics tools, advertising SDKs, tracking pixels, or third-party services that collect user data. There are no ads in the app. Your behaviour inside the app is completely private.</p>
   </section>
 
   <section>
     <h2>Children's Privacy</h2>
-    <p>Football IQ welcomes players aged 13 and above. For users under 16, we require parental or guardian consent before account creation. We do not knowingly collect data from children under 13. If you believe a child under 13 has created an account, contact us and we will delete the account promptly.</p>
-  </section>
-
-  <section>
-    <h2>Data Storage & Security</h2>
-    <p>Your data is stored on secure servers. We use encryption in transit (HTTPS) and at rest. No system is 100% secure, but we follow industry best practices to protect your information.</p>
-    <p>We retain your data for as long as your account is active. If you delete your account, we delete your personal data within 30 days.</p>
-  </section>
-
-  <section>
-    <h2>Your Rights</h2>
-    <p>You have the right to:</p>
-    <ul>
-      <li>Access the data we hold about you.</li>
-      <li>Correct inaccurate data.</li>
-      <li>Request deletion of your account and data.</li>
-      <li>Opt out of marketing emails at any time.</li>
-      <li>Export your training history.</li>
-    </ul>
-    <p>To exercise any of these rights, email us at <a href="mailto:privacy@footballiq.app">privacy@footballiq.app</a>.</p>
-  </section>
-
-  <section>
-    <h2>Third-Party Services</h2>
-    <p>We may use third-party analytics tools (e.g. Firebase, Mixpanel) to understand app usage. These tools may set cookies or similar identifiers. You can limit tracking through your device settings.</p>
+    <p>Because we collect absolutely no data, Football IQ is safe for users of all ages including players under 13. There is nothing to collect, store, or share about any user, regardless of age.</p>
   </section>
 
   <section>
     <h2>Changes to This Policy</h2>
-    <p>If we make significant changes, we'll notify you via the app or by email before they take effect. The "Effective" date at the top of this page will always reflect the latest version.</p>
+    <p>If our data practices ever change, we will update this policy and notify users through the app before any changes take effect. The "Effective" date at the top always reflects the latest version.</p>
   </section>
 
   <section>
