Update contact email in privacy policy

--- a/footballprivacypolicy.html
+++ b/footballprivacypolicy.html
@@ -219,7 +219,7 @@
 
   <section>
     <h2>Contact</h2>
-    <p>Questions? Reach us at <a href="mailto:privacy@footballiq.app">privacy@footballiq.app</a>. We aim to respond within 5 business days.</p>
+    <p>Questions? Reach us at <a href="mailto:privacy@footballiq.app">profilesleetcode@gmail.com</a>. We aim to respond within 5 business days.</p>
   </section>
 
 </main>
